@@ -15,6 +15,8 @@ Version 5.0
 - Fix a bug where return code and error messages were incorrect when
   using ``CliRunner``.
 - added `get_current_context`.
+- added a `meta` dictionary to the context which is shared across the
+  linked list of contexts to allow click utilities to place state there.
 
 Version 4.1
 -----------
